--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,15 +1,22 @@
 #navbar{
     display: flex;
     padding-top: 50px;
-    justify-content: space-around;
+    justify-content: space-between;
     scroll-snap-align: start;
     scroll-snap-type: y mandatory;
+    width: 80%;
+}
+
+header{
+    display: flex;
+    justify-content: center;
 }
 
 .nav-menu {
     display: flex;
-    gap: 70px;
     list-style: none;
+    width: 70%;
+    justify-content: space-between;
 }
 
 .nav-item a{
@@ -25,7 +32,7 @@
     display: flex;
     list-style: none;
     width: 20%;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-top: 3px;
     align-items: center;
 }
@@ -40,11 +47,10 @@
 
 .nav-menu {
     display: flex;
-    gap: 70px;
 }
 
 .nav-link {
-    font-size: 25px;
+    font-size: 1.563rem;
     font-weight: 400;
     color: white;
 }
@@ -65,6 +71,93 @@
     background-color: white;
 }
 
+.language img{
+    width: 30px;
+}
+
+.language-selected{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.language-selected:after{
+    content: '';
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-image: url("https://flagsapi.com/US/flat/64.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: 10px;
+}
+
+.language-selected.change-br:after{
+    background-image: url("https://flagsapi.com/BR/flat/64.png");
+}
+
+.language-selected.change-en:after{
+    background-image: url("https://flagsapi.com/US/flat/64.png");
+}
+
+.language ul {
+    position: absolute;
+    width: fit-content;
+    padding: 10px 20px;
+    margin-left: -21px;
+    margin-top: -73px;
+    opacity: 0;
+    list-style-type: none;
+    transition: all 0.1s;
+}
+
+.language ul li a{
+    display: block;
+    font-size: 1.563rem;
+}
+
+.language:hover ul{
+    margin-top: 0px;
+    opacity: 1;
+}
+
+.language ul.show-list {
+    margin-top: 0px;
+    opacity: 1;
+}
+
+a.br:hover{
+    color: var(--color-purple);
+}
+
+a.en:hover{
+    color: var(--color-purple);
+}
+
+a.br:before{
+    content: '';
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background-image: url("https://flagsapi.com/BR/flat/64.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: 10px;
+    vertical-align: -15%;
+}
+
+a.en:before{
+    content: '';
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background-image: url("https://flagsapi.com/US/flat/64.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: 10px;
+    vertical-align: -15%;
+}
+
 @media (max-width: 979px){
     .nav-item a{
         font-size: 1.25rem;
@@ -73,6 +166,12 @@
     #navbar .contacts-icon img{
         height: 20px;
     }
+}
+
+@media (max-width: 1050px){
+}
+
+@media (max-width: 850px){
 }
 
 @media(max-width: 768px) {
@@ -107,6 +206,7 @@
         padding-top: 48px;
         flex-direction: column;
         background-color: #040208;
+        justify-content: initial;
         width: 65vw;
         height: 200vh;
         text-align: center;
@@ -118,7 +218,9 @@
         position: fixed;
         left: -100%;
         padding: 20px;
-        top: 30%;
+        justify-content: center;
+        gap: 40px;
+        top: 40%;
         z-index: 9999;
         border-top: solid 1px;
         transition: 0.3s;
@@ -144,5 +246,20 @@
 
     .contacts-icon{
         width: 40%;
+    }
+
+    .language{
+        display: flex;
+        justify-content: center;
+        width: 65vw;
+    }
+
+    .language ul{
+        display: flex;
+    }
+
+    .language ul li a{
+        margin-top: 35px;
+        margin-left: 21px;
     }
 }
