--- a/css/projects.css
+++ b/css/projects.css
@@ -24,12 +24,18 @@
     font-size: 20px;
     display: flex;
     align-items: center;
-    gap: 10px;
 }
 
-.project-title img {
+.project-title a::after{
+    content: '';
+    display: inline-block;
+    background-image: url(/assets/link.png);
+    background-repeat: no-repeat;
+    background-size: contain;
     width: 20px;
-    padding-left: 5px;
+    height: 20px;
+    margin-left: 10px;
+    vertical-align: middle;
 }
 
 .project-content {
@@ -82,7 +88,7 @@
         font-size: 1rem;
     }
 
-    #projects .project-title img{
+    .project-title a::after{
         width: 16px;
     }
 
@@ -122,16 +128,16 @@
         font-size: 0.8rem;
     }
 
-    #projects .project-title img{
-        width: 16px;
-    }
-
     .project-text h4{
         font-size: 1.2rem;
     }
 
     .project-text p{
         font-size: 1rem;
+    }
+
+    .project-title a::after{
+        width: 15px;
     }
 
     .project video{
@@ -168,8 +174,10 @@
         font-size: 0.5rem;
     }
 
-    #projects .project-title img{
-        width: 11px;
+    .project-title a::after{
+        width: 10px;
+        margin-left: 5px;
+        margin-top: 5px;
     }
 
     .project-content {
