--- a/css/global.css
+++ b/css/global.css
@@ -20,10 +20,6 @@
   background: linear-gradient(0deg, rgba(13,10,20,1) 0%, rgba(0,0,0,1) 30%, rgba(0,0,0,1) 70%, rgba(13,10,20,1) 100%);
 }
 
-body{
-  padding: 0px 50px 0px 50px;
-}
-
 html{
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
@@ -41,6 +37,15 @@ html::-webkit-scrollbar {
 html::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: white;
+}
+
+body{
+  padding: 0px 50px 0px 50px;
+}
+
+header {
+  display: flex;
+  justify-content: center;
 }
 
 ul, li, a{
