--- a/css/about.css
+++ b/css/about.css
@@ -15,7 +15,7 @@
 }
 
 #about img:nth-child(2) {
-    height: 600px;
+    height: 500px;
 }
 
 #about-title {
@@ -139,7 +139,7 @@ footer img:hover {
     }
 
     #about img:nth-child(2) {
-        height: 500px;
+        height: 400px;
     }
 
     #location-experience p{
@@ -149,6 +149,10 @@ footer img:hover {
     #location-experience p:nth-child(1)::before, #location-experience p:nth-child(2)::before{
         width: 20px;
         height: 20px;
+    }
+
+    #about-text{
+        width: auto;
     }
 }
 
@@ -170,7 +174,7 @@ footer img:hover {
     }
 
     #about img:nth-child(2) {
-        height: 400px;
+        height: 280px;
     }
 
     #location-experience p{
@@ -202,7 +206,7 @@ footer img:hover {
     }
 
     #about img:nth-child(2) {
-        height: 350px;
+        height: 250px;
     }
 
     #location-experience p{
@@ -249,7 +253,7 @@ footer img:hover {
     }
 
     #about img:nth-child(2) {
-        height: 300px;
+        height: 200px;
     }
 
     #location-experience p{
@@ -280,7 +284,7 @@ footer img:hover {
     }
 
     #about img:nth-child(2) {
-        height: 250px;
+        height: 150px;
     }
 
     #location-experience p{
@@ -293,16 +297,25 @@ footer img:hover {
 }
 
 @media (max-width: 480px){
+
+    #about{
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+        margin-top: -50px;
+        gap: 20px;
+    }
+
     #about-title h2 {
         font-size: 1.2rem;
     }
 
     #about img:nth-child(2) {
-        height: 220px;
+        height: 250px;
     }
 
     footer{
-        margin-top: 500px;
+        margin-top: 600px;
         gap: 10px;
         height: 90px;
     }
